--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,5 +10,6 @@ RUN cargo build --release
 FROM alpine:3.22
 
 COPY --from=build /usr/src/lucos_configy_api/target/release/lucos_configy_api /usr/local/bin/lucos_configy_api
+COPY config.yaml .
 
 CMD ["lucos_configy_api"]
