--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -15,6 +15,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml_ng = "0.9"
 
+# Help with content negotiation
+axum-codec = { version = "0.0.20", features = ["json", "yaml"] }
+
 # (Optional) for HTTP constants like StatusCode, HeaderValue
 http = "1"
 
