--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,6 +14,10 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml_ng = "0.10"
+axum-yaml = "0.5.0"
+
+accept-header = "0.2.3"
+mime = "0.3"
 
 # (Optional) for HTTP constants like StatusCode, HeaderValue
 http = "1"
