--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml_ng = "0.10"
 axum-yaml = "0.5.0"
+csv = "1.4.0"
 
 accept-header = "0.2.3"
 mime = "0.3"
