--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,29 @@ version: 2.1
 orbs:
   lucos: lucos/deploy@0
 
+jobs:
+  test:
+    docker:
+      - image: rust:1.90.0-alpine3.22
+    working_directory: ~/repo/api
+    steps:
+      - checkout:
+          path: ~/repo
+      - run:
+          name: Run Tests
+          command: cargo test
+      - store_artifacts:
+          path: coverage
+
 workflows:
   version: 2
   build-deploy:
     jobs:
+      - test
       - lucos/build-amd64
       - lucos/deploy-avalon:
           requires:
+            - test
             - lucos/build-amd64
           filters:
             branches:
