--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
       - checkout:
           path: ~/repo
       - run:
+          name: Install system dependencies
+          command: apk add --no-cache musl-dev pkgconfig
+      - run:
           name: Run Tests
           command: cargo test
       - store_artifacts:
