--- a/api/config.yaml
+++ b/api/config.yaml
@@ -250,3 +250,9 @@ hosts:
         domain: xwing.s.l42.eu
     salvare:
         domain: salvare.s.l42.eu
+
+components:
+    lucos_navbar:
+    lucos_search_component:
+    lucos_time_component:
+    restful-queue:
