add endpoint for hosts which have http endpoint

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -250,8 +250,10 @@ volumes:
 hosts:
     avalon:
         domain: avalon.s.l42.eu
+        serves_http: true
     xwing:
         domain: xwing.s.l42.eu
+        serves_http: true
     salvare:
         domain: salvare.s.l42.eu
 
