update IPv6 address for xwing after reinstall

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -255,7 +255,7 @@ hosts:
     xwing:
         domain: xwing.s.l42.eu
         ipv4: 152.37.104.10
-        ipv6: 2a01:4b00:8598:5a00:b078:bfe3:33b0:f6c1
+        ipv6: 2a01:4b00:8598:5a00:ba27:ebff:fe83:e1ee
         ipv4_nat: 152.37.104.10
         serves_http: true
     salvare:
