Pass PORT env var in dynamically. Technically this'll use the value in src/config.yaml, synced to lucos_creds and then used at deploy time.  Which may seem overkill, but keeps deployments consisent with other apps. There's a chance this could cause a dependency issue in future if everything dies and each system needs to be built and redeployed from scratch.  In this case, PORT may need to be set manually in order to bootstrap the initial deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build: api
     container_name: lucos_configy
     ports:
-      - "8034:8034"
+      - $PORT:$PORT
     environment:
-      PORT: 8034
+      - PORT
     image: lucas42/lucos_configy
     restart: always
