--- a/api/config.yaml
+++ b/api/config.yaml
@@ -14,6 +14,11 @@ systems:
         http_port: 8027
         hosts:
             - avalon
+    lucos_comhra:
+        domain: comhra.l42.eu
+        http_port: 8035
+        hosts:
+            - avalon
     lucos_configy:
         domain: configy.l42.eu
         http_port: 8034
