--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Install system dependencies
           command: apk add --no-cache musl-dev pkgconfig
       - run:
-          name: Run Tests
+          name: Run All Tests (Logic and Config Validation)
           command: cargo test
       - store_artifacts:
           path: coverage
